# start_api

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  entrypoint.sh  example.env  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0c0845b70ee2_create_table.py  1d95ce54290b_create_table.py  1f1cc2b2494d_create_table.py  460b61ca1573_create_table.py  6f6049c2c220_your_message.py  d75d68c240f2_create_account_table.py
app/clients/database/: characters_database_client.py  vehicles_database_client.py
app/clients/networking/: swapi_networking_client.py
app/domain/vehicles/: vehicle_calculations.py
app/errors/: custom_exceptions.py  exception_handlers.py
app/models/: star_wars_character_model.py  star_wars_vehicle_model.py
app/routers/: characters_router.py  vehicles_router.py
app/schemas/: star_wars_character_schema.py  star_wars_vehicle_schema.py  swapi_character_schema.py  swapi_vehicle_schema.py
app/services/: characters_service.py  vehicles_service.py
app/utils/: characters_utils.py
tests/: conftest.py
tests/integration_tests/: test_star_wars_characters_integration.py
tests/unit_tests/client_tests/database_tests/: test_characters_database_client.py
tests/unit_tests/client_tests/networking_tests/: test_swapi_networking_client.py
tests/unit_tests/domain_tests/: test_vehicle_calculations.py
tests/unit_tests/router_tests/: test_characthers_router.py
tests/unit_tests/service_tests/: test_characters_service.py
tests/unit_tests/utils_tests/: test_characters_utils.py
