[tool.poetry]
name = "awapi"
version = "0.1.0"
description = ""
authors = ["Taras Nytiaha <taras.nytiaha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
SQLAlchemy = "^2.0.35"
alembic = "^1.13.3"
pydantic = "^2.9.2"
mock-alchemy = "^0.2.6"
pytest = "^8.3.3"
httpx = "^0.27.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
responses = "^0.25.3"
pytest-dotenv = "^0.5.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
